# talos-torque-control

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg
doc/: CMakeLists.txt  Doxyfile.extra.in  Overview.md  ddpRun.md  forceEnergy.md  installation.md  running.md
doc/additionalDoc/: package.h
include/sot/torque-control/: talos-common.hh
include/sot/torque_control/: talos-common.hh
launch/: simulation_block.launch
python/: CMakeLists.txt  start_talos_block_gazebo.py
python/dynamic_graph/sot/torque_control/talos/: admittance_ctrl_conf.py  balance_ctrl_conf.py  balance_ctrl_sim_conf.py  base_estimator_conf.py  base_estimator_sim_conf.py  control_manager_conf.py  control_manager_conf.py~  control_manager_sim_conf.py  create_entities_utils_talos.py  create_entities_utils_talos_sinusoid.py  current_controller_conf.py  current_controller_sim_conf.py  ddp_controller_conf.py  ddp_controller_conf.py~  force_torque_estimator_conf.py  inverse_dynamics_controller_gains.py  joint_pos_ctrl_gains.py  joint_pos_ctrl_gains_sim.py  joint_torque_controller_conf.py  joint_torque_controller_sim_conf.py  main_com.py  main_ddp_talos.py  main_sim_com.py  main_sim_com_torque.py  main_sim_com_vel.py  main_sim_ddp_talos.py  main_sim_inverse_dyn_balance_controller.py  main_sim_posture_torque.py  main_sim_talos.py  main_sim_talos_sinusoid.py  main_sim_torque_bellStep.py  main_sim_walk_torque.py  main_sim_walk_torque_online.py  main_sim_walk_vel.py  main_sim_walk_vel_online.py  main_sim_wrist_force.py  main_talos.py  main_talos_sinusoid.py  motors_parameters.py  motors_parameters_pwl.py  (+4 more)
script/: integ_run_test_utils.py  integ_sim_walk_torque.py  integ_sim_walk_vel.py  run_test_utils.py  sim_com.py  sim_ddp_sinu_effort.py  sim_posture.py  sim_sinu_effort.py  sim_sinusoid_elbow.py  sim_torque_bellStep.py  sim_walk.py  sim_walk_torque.py  sim_walk_vel.py  sim_wrist_force.py  test_ddp_sinu_effort.py  test_effort.py
src/: CMakeLists.txt  talos-common.cpp
traj_multicontact_api/: create_files.py  wrench6D_from_f3D.py
traj_multicontact_api/dat/isa/: waist_se3.py
traj_multicontact_api/mc_api_2_trajs/: step_in_place_REF.cs  walk_10cm_REF.cs  walk_20cm_REF.cs
worlds/: talos_block_full.world
